--- a/[Redis] springbootPubSub/src/main/resources/templates/index.html
+++ b/[Redis] springbootPubSub/src/main/resources/templates/index.html
@@ -121,6 +121,12 @@
                             Redis Pub/Sub 테스트 도구
                         </h1>
                         <p class="mb-0 mt-2">실시간 메시지 발행 및 구독 테스트</p>
+                        <div class="mt-3">
+                            <a href="/users/" class="btn btn-outline-light btn-sm me-2">
+                                <i class="fas fa-users me-1"></i>사용자 관리
+                            </a>
+                            <small class="text-light">다수 사용자 환경에서 채널별 구독자 관리</small>
+                        </div>
                     </div>
                     <div class="card-body">
                         
